2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_check_line_directive, _save_line_directive)
	(_next_text): Split out sub from _next_text.
	(_parse_texi) <BEGIN LINE>: Call _check_line_directive and
	_save_line_directive.  The condition for #line being meaningful 
	is the same as what was in _next_text.  

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (#line directive) <CPP_LINE_DIRECTIVES>:
	Add a missing ).

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (@obsolete_variables): Remove.
	(obsolete_option): Remove.
	(%customization_variable_classes): Remove 'obsolete_variables'.
	* tp/texi2any.pl (set_from_init_file, set_from_cmdline),
	* tp/Texinfo/Convert/Converter.pm (set_conf, force_conf):
	Do not call Texinfo::Common::obsolete_option.
	* NEWS: Mention that obsolete customization variables are no 
	longer recognized.

	* tp/Texinfo/Parser.pm (_setup_parser): Do not look at 
	'INLINE_INSERTCOPYING'.

	If more variables are deprecated, then it may be worth 
	reinstating some of this code.

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_command_with_command_as_argument):
	Remove code checking for a case where the command has two 
	elements in 'args', the first all whitespace, as this case never 
	seems to happen.

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@titlefont @center @sp):
	Do not mention the possibility of using these outside of a title 
	page.

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%in_index_commands): New hash, 
	containing only 'sortas'.
	* tp/Texinfo/Parser.pm (%in_full_text_commands): Do not 
	specially remove 'sortas'.
	(_setup_parser, _parse_command_line_args): Use 
	%in_simple_text_commands for the commands that may appear in 
	index commands.  This was done until 2017-04-01.
	(_parse_texi) <brace commands>: Move check for valid nesting of 